--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,46 @@ body {
     .features .table__p {
       text-align: center; }
 
+.footer {
+  background-color: #FEE5E5;
+  padding: 5rem;
+  display: grid;
+  grid-template-columns: 5rem repeat(4, 1fr) 5rem; }
+  .footer__logo {
+    grid-column: 2 / 3; }
+  .footer__menu {
+    list-style: none; }
+  .footer__link:link, .footer__link:visited {
+    text-decoration: none;
+    color: #000;
+    outline: none;
+    transition: all, .2s; }
+  .footer__link:hover, .footer__link:active {
+    color: #FA5959; }
+  .footer__menu--1 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .footer__menu--2 {
+    display: flex;
+    flex-direction: column;
+    justify-content: center; }
+  .footer__menu--3 {
+    display: flex;
+    justify-content: center;
+    align-items: center; }
+
+.copyright {
+  font-size: 1.4rem;
+  color: #000;
+  margin-top: 6rem;
+  margin-right: auto;
+  margin-left: auto;
+  text-align: center;
+  width: 100%; }
+  .copyright__link {
+    color: #000; }
+
 .gallery {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
@@ -336,7 +376,7 @@ body {
   line-height: 25px;
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  padding: 1.6rem 4.2rem;
+  padding: 1rem 4.2rem;
   cursor: pointer;
   outline: none; }
   .btn__link--light:link, .btn__link--light:visited {
